<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSaveChanges"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/transparente">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparente"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_image"
                android:textColor="@color/negro"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="@dimen/fotoperfilsize"
                android:layout_height="@dimen/fotoperfilsize"
                android:contentDescription="Imagen de perfil"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/register_username"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:id="@+id/etuname"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:hint="User name"
                android:singleLine="true"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/register_nombre"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:id="@+id/etfname"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:hint="@string/register_hint_nombre"
                android:singleLine="true"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/register_apellidos"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <EditText
                android:id="@+id/etlname"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:hint="@string/register_hint_apellidos"
                android:singleLine="true"
                android:textColor="#000000"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_save_changes"
        android:textColor="#000000"
        android:textSize="@dimen/normal_text" />

</RelativeLayout>