<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnOk"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/transparente">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/txt_group"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvGroup" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvLugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_lugar"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:id="@+id/btnLocation"
                    android:layout_width="@dimen/locationButton"
                    android:layout_height="@dimen/locationButton"
                    android:layout_toRightOf="@+id/tvLugar"
                    android:layout_alignParentTop="true"
                    android:layout_above="@+id/tvLugar2"
                    android:layout_marginLeft="25dp"
                    android:background="@drawable/ic_menu_mapmode" />

                <TextView
                    android:id="@+id/tvLugar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/tvLugar"/>

                <TextView
                    android:id="@+id/tvAttributions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvLugar2"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/poweredBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/powered_by_google_light"
                    android:layout_below="@+id/tvLugar2"
                    android:visibility="gone"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fecha"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/negro" />

            <EditText
                android:id="@+id/etFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_fecha"
                android:inputType="date" />


            <TextView
                android:id="@+id/tvHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_hora"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/negro" />

            <EditText
                android:id="@+id/etHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_hora"
                android:inputType="time" />

            <TextView
                android:id="@+id/tvPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_precio"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/negro" />

            <EditText
                android:id="@+id/etPrecio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minWidth="48dp" />

            <TextView
                android:id="@+id/tvUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_url"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/negro" />

            <EditText
                android:id="@+id/etUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_url"
                android:inputType="textUri" />

            <TextView
                android:id="@+id/tvCartel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_cartel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/negro" />


            <ImageView
                android:id="@+id/ivCartel"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Ok"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />
</RelativeLayout>